Some changes/improvements